parser/src/test/resources/corpus/invalid/47_per_without_annum.ff
rule "Per Without Annum" {
  let rate = 1.5% per
}
